tests/machine/x/cpp/pure_global_fold.mochi.error
line 12: ../../../tests/machine/x/cpp/pure_global_fold.mochi.cpp:12:10: warning: use of ‘auto’ in parameter declaration only available with ‘-std=c++20’ or ‘-fconcepts’
   12 | auto inc(auto x) {
      |          ^~~~
../../../tests/machine/x/cpp/pure_global_fold.mochi.cpp: In function ‘auto inc(auto:1)’:
../../../tests/machine/x/cpp/pure_global_fold.mochi.cpp:13:17: error: ‘k’ was not declared in this scope
   13 |     return (x + k);
      |                 ^

 11 | 
 12 | auto inc(auto x) {
 13 |     return (x + k);
