tests/machine/x/cpp/pure_global_fold.mochi.cpp
#include <iostream>
#include <vector>
#include <unordered_map>
#include <map>
#include <algorithm>
#include <numeric>

template<typename T> void print(const T& v){ std::cout << v; }
void print(const std::vector<int>& v){ for(size_t i=0;i<v.size();++i){ if(i) std::cout<<' '; std::cout<<v[i]; }}
void print(bool b){ std::cout<<(b?"true":"false"); }

auto inc(auto x) {
    return (x + k);
}

int main() {
    auto k = 2;
    print(inc(3));
    return 0;
}
